# Pedestrian-Detection

./: README.md
PedestrianDetection/: PedestrianDetection.sln
PedestrianDetection/PedestrianDetection/: CMakeLists.txt  CroppedImage.cpp  CroppedImage.h  PedestrianDetection.cpp  PedestrianDetection.vcxproj  PedestrianDetection.vcxproj.filters  ReadMe.txt  captureVideo.cpp  captureVideo.h  convexHull.cpp  convexHull.h  hogDetection.cpp  hogDetection.h  mogDetection.cpp  mogDetection.h  stdafx.cpp  stdafx.h
